--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   flutter_local_notifications: ^17.2.1+1
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
